--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.7",
+    "bootstrap": "^5.3.0-alpha2",
     "bootswatch": "^5.2.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
